# fcitx5-voxtype-bridge

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  voxtypebridge.conf.in.in  voxtypebridge.cpp  voxtypebridge.h
